--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,8 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Site Title"
-title_separator          : "-"
+title                    : "Park SungJin"
+title_separator          : "sudo"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Park SungJin"
 description              : "sudo"
