--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Park SungJin"
+title                    : "Personal Posting Blog"
 title_separator          : "sudo"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Park SungJin"
